--- a/Bookz/Base.lproj/LaunchScreen.storyboard
+++ b/Bookz/Base.lproj/LaunchScreen.storyboard
@@ -39,6 +39,21 @@
             </objects>
             <point key="canvasLocation" x="1190" y="674"/>
         </scene>
+        <!--Book Reader Controller-->
+        <scene sceneID="WfM-91-2y3">
+            <objects>
+                <viewController id="9vI-5J-PCh" customClass="BookReaderController" customModule="Bookz" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rpz-XR-wYD">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Qfy-fa-Njv"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cO3-R7-sBa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2361" y="674"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="8ZR-nE-31z">
             <objects>
